--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,9 @@ streamlit==0.89.0
 xgboost==1.4.2
 altair==4.1.0
 pandas==1.3.3
-entsoe_py==0.1.9
+entsoe_py==0.2.13
 sktime==0.8.0
 python-dotenv==0.19.0
 scikit_learn==0.24.2
 beautifulsoup4==4.10.0
+sktime==0.4.1
