--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-numpy==1.21.2
-streamlit==0.89.0
-xgboost==1.4.2
-altair==4.1.0
-pandas==1.3.3
-entsoe_py==0.2.13
-sktime==0.8.0
-python-dotenv==0.19.0
-scikit_learn==0.24.2
-beautifulsoup4==4.10.0
+numpy==1.19.1
+pandas==1.1.0
+python-dotenv==0.14.0
+entsoe-py==0.2.13
+scikit-learn==0.23.1
+xgboost==0.90
+sktime==0.4.1
+streamlit==0.64.0
